--- a/templates/main/homepage.html.twig
+++ b/templates/main/homepage.html.twig
@@ -3,5 +3,5 @@
 {% block title %}Boundary Waters Entry Point Alerter!{% endblock %}
 
 {% block body %}
-    <main>Test</main>
+    <main>Get started!</main>
 {% endblock %}
