--- a/templates/entryPoint/entryPoints.html.twig
+++ b/templates/entryPoint/entryPoints.html.twig
@@ -4,6 +4,12 @@
 
 {% block body %}
     {% for entryPoint in entryPoints %}
-        <a href="{{ path('app_entry_point_show', { id: entryPoint.number }) }}">{{ entryPoint.name }}</a>
+        <div class="flex items-center mb-4">
+            <input id="default-checkbox" type="checkbox" value="" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+            <label for="default-checkbox" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">
+                <a href="{{ path('app_entry_point_show', { id: entryPoint.number }) }}">{{ entryPoint.name }}</a>
+            </label>
+        </div>
     {% endfor %}
+    
 {% endblock %}
