--- a/templates/entryPoint/entryPoints.html.twig
+++ b/templates/entryPoint/entryPoints.html.twig
@@ -3,13 +3,35 @@
 {% block title %}Entry Points{% endblock %}
 
 {% block body %}
-    {% for entryPoint in entryPoints %}
-        <div class="flex items-center mb-4">
-            <input id="default-checkbox" type="checkbox" value="" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-            <label for="default-checkbox" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">
-                <a href="{{ path('app_entry_point_show', { id: entryPoint.number }) }}">{{ entryPoint.name }}</a>
+    <form class="max-w-sm mx-auto">
+        <label for="entryPoints" class="block mb-2 text-sm font-medium text-gray-900 text-white">Entry Point</label>
+        <select id="entryPoints" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+            <option selected>Choose an Entry Point</option>
+            {% for entryPoint in entryPoints %}
+                <option value="{{ entryPoint.number }}">{{ entryPoint.number }} - {{ entryPoint.name }}</option>
+            {% endfor %}
+        </select>
+
+        <div class="max-w-md mx-auto p-6 mt-8">
+            <label for="datepicker-styled" class="block mb-2 text-sm font-medium text-gray-900 text-white">
+                Select a date
             </label>
+
+            <div class="relative">
+                <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+                <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+                </svg>
+                </div>
+                
+                <input 
+                type="date" 
+                id="datepicker-styled" 
+                name="datepicker_styled"
+                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                value="{{ selectedDate|default('') }}"
+                >
+            </div>
         </div>
-    {% endfor %}
-    
+    </form>
 {% endblock %}
