--- a/templates/main/_asideMenu.html.twig
+++ b/templates/main/_asideMenu.html.twig
@@ -3,7 +3,7 @@
     <button 
         data-closeable-target="toggleButton"
         data-action="click->closeable#open"
-        class="hidden fixed top-4 right-70 z-50 p-3 text-white hover:bg-white/10 rounded-lg transition-colors"
+        class="hidden fixed z-50 p-3 text-white hover:bg-white/10 rounded-lg transition-colors"
         aria-label="Open menu"
     >
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 448 512">
