--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
                 <div class="flex items-center justify-between h-16">
                     <a href="{{ path('app_homepage') }}">
                         <div class="flex items-center space-x-2">
-                            <span class="text-2xl">⚫️</span>
+                            <img class="h-[42px]" src="{{ asset('images/canoe_logo.png') }}" alt="canoe logo">
                             <span class="text-xl font-bold bg-gradient-to-r from-white to-amber-200 bg-clip-text text-transparent">
                                 Boundary Waters Entry Point Alerter
                             </span>
