fixed issue with sidebar pushing the footer out of view

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -73,7 +73,7 @@
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
                 <div class="text-center">
                     <p class="text-white/70 text-sm">
-                        Made with <span class="text-red-400">♥</span> by <span class="font-semibold text-white">Duncan Phelps</span>
+                        Made by <span class="font-semibold text-white">Duncan Phelps</span>
                     </p>
                     <p class="text-white/50 text-xs mt-2">
                         © {{ "now"|date("Y") }} All rights reserved
