--- a/templates/main/_asideMenu.html.twig
+++ b/templates/main/_asideMenu.html.twig
@@ -23,7 +23,7 @@
     <!-- Sidebar menu -->
     <aside 
         data-closeable-target="sidebar"
-        class="pb-8 lg:pb-0 lg:w-[411px] shrink-0 lg:block lg:min-h-screen text-white border-b lg:border-b-0 lg:border-l border-white/20 transition-all overflow-hidden"
+        class="pb-8 lg:pb-0 lg:w-[411px] shrink-0 lg:block text-white border-b lg:border-b-0 lg:border-l border-white/20 transition-all overflow-hidden"
         style="width: 0; padding: 0; border-width: 0;"
     >
         <div class="flex justify-between mt-11 mb-7">
