--- a/templates/main/_asideMenu.html.twig
+++ b/templates/main/_asideMenu.html.twig
@@ -3,7 +3,7 @@
     <button 
         data-closeable-target="toggleButton"
         data-action="click->closeable#toggle"
-        class="fixed z-50 p-3 top-[75px] right-85 text-white hover:bg-white/10 rounded-lg transition-colors group"
+        class="fixed z-50 p-3 top-[75px] right-85 text-white hover:bg-white/10 rounded-lg transition-colors group cursor-pointer"
         aria-label="Toggle menu"
     >
         <!-- Burger button visible when menu closed -->
@@ -31,7 +31,7 @@
         </div>
         <div>
             <div class="flex flex-col space-y-1.5">
-                <div class="rounded-2xl py-1 px-3 flex justify-center w-32 items-center" style="background: rgba(255, 184, 0, .1);">
+                <div class="rounded-2xl py-1 px-3 flex justify-center w-50 items-center" style="background: rgba(255, 184, 0, .1);">
                     <div class="rounded-full h-2 w-2 bg-amber-400 blur-[1px] mr-2"></div>
                     <p class="uppercase text-xs">Tracking x Entry Point(s)</p>
                 </div>
