got a log in form and some auth working

--- a/templates/main/_asideMenu.html.twig
+++ b/templates/main/_asideMenu.html.twig
@@ -39,7 +39,7 @@
                     <a class="hover:text-amber-400 transition-colors duration-200" href="">My Tracked Entry Points</a>
                 </h3>
                 <h3 class="tracking-tight text-[22px] font-semibold">
-                    <a class="hover:text-amber-400 transition-colors duration-200" href="">Logout</a>
+                    <a href="{{ path('app_logout') }}" class="hover:text-amber-400 transition-colors duration-200" href="">Logout</a>
                 </h3>
             </div>
         </div>
