--- a/templates/entryPoint/entryPoints.html.twig
+++ b/templates/entryPoint/entryPoints.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Entry Points{% endblock %}
 
 {% block body %}
-    <form class="max-w-sm mx-auto">
+    <form class="max-w-sm mx-auto p-6 bg-black/20 backdrop-blur-sm rounded-lg shadow-md" method="post" action="">
         <label for="entryPoints" class="block mb-2 text-sm font-medium text-gray-900 text-white">Entry Point</label>
         <select id="entryPoints" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
             <option selected>Choose an Entry Point</option>
@@ -33,5 +33,6 @@
                 >
             </div>
         </div>
+        <button type="submit" class="w-full text-gray-900 bg-amber-400 hover:bg-amber-500 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800 cursor-pointer">Submit</button>
     </form>
 {% endblock %}
