--- a/templates/main/homepage.html.twig
+++ b/templates/main/homepage.html.twig
@@ -27,7 +27,7 @@
         </p>
         
         <div class="pt-4">
-            <a href="{{ path('app_entry_points_list') }}" class="bg-amber-400 hover:bg-amber-500 text-gray-900 font-bold text-xl px-8 py-4 rounded-lg shadow-lg hover:shadow-2xl hover:shadow-amber-400/60 transform hover:scale-105 hover:-translate-y-1 transition-all duration-300 inline-flex items-center space-x-2">
+            <a href="{{ path('app_permit_watch_new') }}" class="bg-amber-400 hover:bg-amber-500 text-gray-900 font-bold text-xl px-8 py-4 rounded-lg shadow-lg hover:shadow-2xl hover:shadow-amber-400/60 transform hover:scale-105 hover:-translate-y-1 transition-all duration-300 inline-flex items-center space-x-2">
                 <span>Get Started!</span>
                 <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6" />
