--- a/templates/main/_asideMenu.html.twig
+++ b/templates/main/_asideMenu.html.twig
@@ -34,7 +34,7 @@
                 <div class="flex flex-col space-y-1.5">
                     <div class="rounded-2xl py-1 px-3 flex justify-center w-50 items-center" style="background: rgba(255, 184, 0, .1);">
                         <div class="rounded-full h-2 w-2 bg-amber-400 blur-[1px] mr-2"></div>
-                        <p class="uppercase text-xs">Tracking x Entry Point(s)</p>
+                        <p class="uppercase text-xs">Tracking {{ app.user.permitWatches.count }} Entry Point(s)</p>
                     </div>
                     <h3 class="tracking-tight text-[22px] font-semibold">
                         <a class="hover:text-amber-400 transition-colors duration-200" href="">My Tracked Entry Points</a>
