--- a/templates/main/_asideMenu.html.twig
+++ b/templates/main/_asideMenu.html.twig
@@ -37,7 +37,7 @@
                         <p class="uppercase text-xs">Tracking {{ app.user.permitWatches.count }} Entry Point(s)</p>
                     </div>
                     <h3 class="tracking-tight text-[22px] font-semibold">
-                        <a class="hover:text-amber-400 transition-colors duration-200" href="">My Tracked Entry Points</a>
+                        <a class="hover:text-amber-400 transition-colors duration-200" href="{{ path('app_my_permit_watches') }}">My Tracked Entry Points</a>
                     </h3>
                     <h3 class="tracking-tight text-[22px] font-semibold">
                         <a href="{{ path('app_logout') }}" class="hover:text-amber-400 transition-colors duration-200" href="">Logout</a>
