--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -63,6 +63,18 @@
         <main class="flex-1">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8 flex gap-6">
                 <div class="flex-1">
+                    {% for message in app.flashes('success') %}
+                        <div class="p-4 mb-4 text-green-800 bg-green-100 rounded-lg">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                    
+                    {% for message in app.flashes('error') %}
+                        <div class="p-4 mb-4 text-red-800 bg-red-100 rounded-lg">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                    
                     {% block body %}{% endblock %}
                 </div>
                 {{ include('main/_asideMenu.html.twig') }}
