--- a/templates/permitWatch/permitWatches.html.twig
+++ b/templates/permitWatch/permitWatches.html.twig
@@ -11,7 +11,7 @@
 				<div class="px-4 py-5 sm:px-6">
 					<div class="flex items-center justify-between">
 						<div>
-							<h3 class="text-lg leading-6 font-medium text-gray-900">{{ permitWatch.entryPoint.name }}</h3>
+							<h3 class="text-lg leading-6 font-medium text-gray-900">{{ permitWatch.entryPoint.number }}. {{ permitWatch.entryPoint.name }}</h3>
 							<p class="mt-1 max-w-2xl text-sm text-gray-500">{{ permitWatch.targetDate|date('F j, Y') }}</p>
 						</div>
 						<div class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white ps-1">
