--- a/templates/permitWatch/permitWatches.html.twig
+++ b/templates/permitWatch/permitWatches.html.twig
@@ -5,13 +5,19 @@
 
 {% block body %}
 	{# Todo: add something saying "no permit watches" and then a create button. for when the user doesn't have any yet #}
+	<h1 class="text-xl md:text-2xl text-white/90 leading-relaxed font-bold bg-clip-text leading-tight justify-center text-center mb-8">
+		Tracked Entry Points
+	</h1>
 	<ul class="bg-white shadow overflow-hidden sm:rounded-md max-w-sm mx-auto">
 		{% for permitWatch in permitWatches %}
 			<li class="border-t border-gray-200">
 				<div class="px-4 py-5 sm:px-6">
 					<div class="flex items-center justify-between">
 						<div>
-							<h3 class="text-lg leading-6 font-medium text-gray-900">{{ permitWatch.entryPoint.number }}. {{ permitWatch.entryPoint.name }}</h3>
+							<h3 class="text-lg leading-6 font-medium text-gray-900">
+								{{ permitWatch.entryPoint.number }}.
+								{{ permitWatch.entryPoint.name }}
+							</h3>
 							<p class="mt-1 max-w-2xl text-sm text-gray-500">{{ permitWatch.targetDate|date('F j, Y') }}</p>
 						</div>
 						<div class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white ps-1">
