added box shadow to permit watch list

--- a/templates/permitWatch/permitWatches.html.twig
+++ b/templates/permitWatch/permitWatches.html.twig
@@ -8,7 +8,7 @@
         <h1 class="text-xl md:text-2xl text-white/90 leading-relaxed font-bold bg-clip-text leading-tight justify-center text-center mb-8">
             Tracked Entry Points
         </h1>
-        <ul class="bg-white shadow overflow-hidden sm:rounded-md max-w-sm mx-auto">
+        <ul class="bg-white shadow-lg overflow-hidden sm:rounded-md max-w-sm mx-auto">
             {% for permitWatch in permitWatches %}
                 <li class="border-t border-gray-200">
                     <div class="px-4 py-5 sm:px-6">
