created a modal using the dialog tag and stimulus

--- a/templates/components/card/defaultCard.html.twig
+++ b/templates/components/card/defaultCard.html.twig
@@ -1,4 +1,4 @@
-<div class="p-6 bg-black/20 backdrop-blur-sm rounded-lg shadow-md">
+<div class="p-6 bg-[#013f30] backdrop-blur-sm rounded-lg shadow-md">
     {% block card_content %}
     {% endblock %}
 </div>
