--- a/templates/components/button/defaultButton.html.twig
+++ b/templates/components/button/defaultButton.html.twig
@@ -1,4 +1,4 @@
 <button class="w-full text-gray-900 bg-amber-400 hover:bg-amber-500 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center cursor-pointer">
     {% block button_content %}
     {% endblock %}
-</button
+</button>
