--- a/templates/macros/button/deleteButton.html.twig
+++ b/templates/macros/button/deleteButton.html.twig
@@ -1,4 +1,9 @@
-<button class="w-full text-gray-900 bg-red-500 hover:bg-red-600 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center cursor-pointer">
-    {% block button_content %}
-    {% endblock %}
-</button>
+{% macro deleteButton(
+    dataAction, 
+    content = "Delete", 
+    class = "w-full text-gray-900 bg-red-500 hover:bg-red-600 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center cursor-pointer"
+) %}
+    <button data-action="{{ dataAction }}" class="{{ class }}">
+        {{ content }}
+    </button>
+{% endmacro %}
