added a fade in animation for the modal. Removed focus-ring from buttons

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+/* fade in animation from tailwind that we will use for the modal */
+@theme { 
+  --animate-fade-in: fadeIn .5s ease-out;
+  
+  @keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+}
