--- a/templates/permitWatch/permitWatches.html.twig
+++ b/templates/permitWatch/permitWatches.html.twig
@@ -26,9 +26,9 @@
 
 								{# MODAL #}
 								<dialog 
-                                    class="open:flex fixed top-1/3 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-[#013f30] rounded-lg shadow-xl w-full md:w-fit md:max-w-[50%] md:min-w-[50%] m-0 z-50 backdrop:bg-slate-600 backdrop:opacity-60" 
+                                    class="open:flex fixed top-1/3 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-[#013f30] rounded-lg shadow-xl w-full md:w-fit md:max-w-[50%] md:min-w-[50%] m-0 z-50 animate-fade-in backdrop:bg-slate-600 backdrop:opacity-60" 
                                     data-modal-target="dialog"
-                                    data-action="close->modal#close"
+                                    data-action="close->modal#close click->modal#clickOutside"
                                 >
 									<div class="flex grow p-5">
 										<div class="grow overflow-auto p-1">
