working on using symfony ux AsLiveComponent to create an edit permit watch form

--- a/templates/permitWatch/permitWatches.html.twig
+++ b/templates/permitWatch/permitWatches.html.twig
@@ -39,6 +39,11 @@
 														</button>
 													</form>
 												</div>
+												<twig:EditPermitWatchForm
+													permitWatchId="{{ permitWatch.id }}"
+													entryPointId="{{ permitWatch.entryPoint.id }}"
+													targetDate="{{ permitWatch.targetDate|date('Y-m-d') }}"
+												/>
 											</div>
 										</div>
 									</div>
