--- a/templates/permitWatch/permitWatches.html.twig
+++ b/templates/permitWatch/permitWatches.html.twig
@@ -41,7 +41,8 @@
 												</div>
 												<twig:EditPermitWatchForm
 													entryPoint="{{ permitWatch.entryPoint }}"
-													targetDate="{{ permitWatch.targetDate|date('Y-m-d') }}"
+													targetDate="{{ permitWatch.targetDate|date('Y-m-d') }}"	
+													permitWatch="{{ permitWatch }}"
 												/>
 											</div>
 										</div>
